--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">E-card</string>
+    <string name="email">Email: </string>
+    <string name="password">Password: </string>
+    <string name="login">LOGIN </string>
+    <string name="first_name">First name: </string>
+    <string name="last_name">Last name: </string>
+    <string name="employee_number">Employee no: </string>
 </resources>
