Layout and basic functionalities update
Changed the appBar layput,
Implemented basic login input check,
Implemented app menu options to change the theme and sign out

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,8 @@
     <string name="first_name">First name: </string>
     <string name="last_name">Last name: </string>
     <string name="employee_number">Employee no: </string>
+    <string name="light_theme">Light theme</string>
+    <string name="dark_theme">Dark theme</string>
+    <string name="sign_out">Sign out</string>
+
 </resources>
