Added the NFC package (Utils, MyHCEService + XML file my_host_metadata)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="light_theme">Light theme</string>
     <string name="dark_theme">Dark theme</string>
     <string name="sign_out">Sign out</string>
+    <string name="my_service_description">Placeholder description</string>
 
 </resources>
